@@ -208,7 +208,7 @@ application level.  Whenever an exception is raised, you can retrieve the
 errors that occured and "might have" lead to the problem from the error log
 copy attached to the exception::
 
-  >>> etree.clearErrorLog()
+  >>> etree.clear_error_log()
   >>> broken_xml = '''
   ... <root>
   ...   <a>
